fix overflow in post content

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -37,6 +37,7 @@
 
   &-content {
     margin-top: 30px;
+    overflow-x: auto;
   }
 
   &-cover {
